# claudometer

./: .gitattributes  .gitignore  README.md  app.py  autostart.py  claudometer.example.toml  config.py  cost.py  menubar_mac.py  pyproject.toml  render.py  requirements-dev.txt  requirements.txt  resume.py  settings.py  tray_windows.py  updates.py  usage_core.py  widget_bar.py
.github/workflows/: ci.yml  release.yml
assets/: capture_settings.py  make_assets.py  make_hero_gif.py
packaging/: README.md  build-macos.sh  build-windows.ps1  update-manifests.py
packaging/homebrew/: claudometer.rb
packaging/scoop/: claudometer.json
packaging/windows-installer/: claudometer.iss
packaging/winget/: Claudometer.installer.yaml
tests/: test_autostart.py  test_cost.py  test_placement.py  test_render.py  test_resume.py  test_settings.py  test_updates.py  test_usage_core.py
